--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.ExpenseTracker"
         tools:targetApi="31">
         <activity
+            android:name=".EditExpenseActivity"
+            android:exported="false"
+            android:label="@string/title_activity_edit_expense"
+            android:theme="@style/Theme.ExpenseTracker" />
+        <activity
             android:name=".CategoryActivity"
             android:exported="false">
             <meta-data
