--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         <activity
             android:name=".EditExpenseActivity"
             android:exported="false"
-            android:label="@string/title_activity_edit_expense"
+            android:parentActivityName=".MainActivity"
             android:theme="@style/Theme.ExpenseTracker" />
         <activity
             android:name=".CategoryActivity"
